--- a/ruby3.4-dotenv.yaml
+++ b/ruby3.4-dotenv.yaml
@@ -2,7 +2,7 @@
 package:
   name: ruby3.4-dotenv
   version: "3.1.7"
-  epoch: 0
+  epoch: 1
   description: Loads environment variables from `.env`.
   copyright:
     - license: MIT
@@ -45,3 +45,21 @@ update:
 
 vars:
   gem: dotenv
+
+test:
+  pipeline:
+    - uses: test/tw/gem-check
+      with:
+        require: |
+          dotenv
+          dotenv/autorestore
+          dotenv/cli
+          dotenv/diff
+          dotenv/environment
+          dotenv/load
+          dotenv/missing_keys
+          dotenv/parser
+          dotenv/template
+          dotenv/version
+          dotenv/substitutions/command
+          dotenv/substitutions/variable
