--- a/cluster-api-controller.yaml
+++ b/cluster-api-controller.yaml
@@ -1,7 +1,7 @@
 package:
   name: cluster-api-controller
   version: "1.9.5"
-  epoch: 2
+  epoch: 1
   description: Cluster API core controller
   copyright:
     - license: Apache-2.0
@@ -40,3 +40,8 @@ update:
     strip-prefix: v
     tag-filter: v
     use-tag: true
+
+test:
+  pipeline:
+    - runs: |
+        cluster-api-controller --help 2>&1 | grep -q "^Usage of cluster-api-controller"
