--- a/cluster-autoscaler-1.32.yaml
+++ b/cluster-autoscaler-1.32.yaml
@@ -1,7 +1,7 @@
 package:
   name: cluster-autoscaler-1.32
   version: 1.32.0
-  epoch: 6
+  epoch: 7
   description: Autoscaling components for Kubernetes
   copyright:
     - license: Apache-2.0
@@ -63,3 +63,8 @@ update:
     use-tag: true
     # There are other tags like "cluster-autoscaler-chart-FOO"
     tag-filter: cluster-autoscaler-1.32.
+
+test:
+  pipeline:
+    - runs: |
+        cluster-autoscaler --help 2>&1 | grep -q "^Usage of cluster-autoscaler"
