--- a/container-entrypoint.yaml
+++ b/container-entrypoint.yaml
@@ -1,7 +1,7 @@
 package:
   name: container-entrypoint
   version: 0.1.0
-  epoch: 30
+  epoch: 31
   description: Simple entrypoint script for containers
   copyright:
     - license: Apache-2.0
@@ -31,3 +31,9 @@ update:
   enabled: true
   github:
     identifier: wolfi-dev/container-entrypoint
+
+test:
+  pipeline:
+    - runs: |
+        str="Here I am, at the entry point"
+        BASE_COMMAND="echo $str" /usr/bin/entrypoint.sh | grep "$str"
