--- a/valijson.yaml
+++ b/valijson.yaml
@@ -1,7 +1,7 @@
 package:
   name: valijson
   version: "1.0.4"
-  epoch: 0
+  epoch: 1
   description: "C++ library for validating JSON schema"
   copyright:
     - license: "BSD-2-Clause"
@@ -30,18 +30,44 @@ pipeline:
   - uses: strip
 
 subpackages:
-  - name: valijson-static
-    description: "C++ library for validating JSON - static libraries"
-    pipeline:
-      - uses: split/static
-
   - name: valijson-dev
     description: "C++ library for validating JSON - development headers"
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/tw/header-check
+          with:
+            files: |
+              compat/optional.hpp
+              valijson/constraint_builder.hpp
+              valijson/exceptions.hpp
+              valijson/schema.hpp
+              valijson/schema_cache.hpp
+              valijson/schema_parser.hpp
+              valijson/subschema.hpp
+              valijson/validation_results.hpp
+              valijson/validation_visitor.hpp
+              valijson/validator.hpp
+              valijson/adapters/std_string_adapter.hpp
+              valijson/constraints/basic_constraint.hpp
+              valijson/constraints/concrete_constraints.hpp
+              valijson/constraints/constraint.hpp
+              valijson/constraints/constraint_visitor.hpp
+              valijson/internal/basic_adapter.hpp
+              valijson/internal/debug.hpp
+              valijson/internal/json_reference.hpp
+              valijson/internal/optional.hpp
+              valijson/internal/uri.hpp
+              valijson/utils/file_utils.hpp
+              valijson/utils/utf8_utils.hpp
 
 update:
   enabled: true
   github:
     identifier: tristanpenman/valijson
     strip-prefix: v
+
+test:
+  pipeline:
+    - uses: test/emptypackage
