--- a/luarocks.yaml
+++ b/luarocks.yaml
@@ -50,7 +50,47 @@ test:
       packages:
         - luajit-dev
         - glibc-dev
+        - openresty
+        - curl
+        - wget
+        - bash
+        - zlib-dev
+        - glibc-dev
+        - python3
   pipeline:
     - runs: |
+        # install lzlib rock
         luarocks --version
-        luarocks install luasocket
+        luarocks install lzlib ZLIB_INCDIR=/usr/include
+
+        # start openresty
+        cp default.conf /etc/nginx/conf.d/default.conf
+        openresty -g "daemon off;" &
+        OPENRESTY_PID=$!
+        sleep 1
+
+        # Generate zlib-compressed data
+        echo -n "Hello from lzlib!" | \
+        python3 -c 'import sys,zlib; sys.stdout.buffer.write(zlib.compress(sys.stdin.buffer.read()))' \
+        > /tmp/compressed_data.bin
+
+        # 3) Send the POST request to localhost
+        curl -i -X POST --data-binary @/tmp/compressed_data.bin http://127.0.0.1:80/
+
+        # 5) Check the error log for our success message
+        if grep -q "Successfully decompressed: Hello from lzlib!" /var/log/openresty/all_error.log; then
+          echo "Test PASSED: ✔ Found decompressed message."
+          kill $OPENRESTY_PID
+          exit 0
+        else
+          echo "Test FAILED: ✗ Message not decompressed!"
+          # Show the last few lines of error log to help debug
+          echo "Log tail:"
+          tail -n 20 /var/log/openresty/all_error.log
+          kill $OPENRESTY_PID
+          exit 1
+        fi
+
+
+    
+        
