--- a/openjdk-24.yaml
+++ b/openjdk-24.yaml
@@ -1,7 +1,7 @@
 package:
   name: openjdk-24
-  version: 24_beta16
-  epoch: 5
+  version: 24_beta36
+  epoch: 0
   description: OpenJDK 24 Early Access Package
   copyright:
     - license: GPL-2.0-or-later
@@ -66,7 +66,7 @@ pipeline:
     with:
       repository: https://github.com/openjdk/jdk
       tag: jdk-${{vars.mangled-package-version}}
-      expected-commit: c58fbef05eace85a2e429da1ac8ff1ae09a0b736
+      expected-commit: 6705a9255d28f351950e7fbca9d05e73942a4e27
 
   - working-directory: /home/build/googletest
     pipeline:
@@ -106,8 +106,6 @@ pipeline:
         --with-giflib=system \
         --with-lcms=system \
         --with-gtest="/home/build/googletest" \
-        --with-version-pre="beta" \
-        --without-version-opt \
         --with-version-string=""
 
   - runs: make jdk-image legacy-jre-image
@@ -133,7 +131,7 @@ pipeline:
       # symlink to shared java cacerts store
       rm -f "${{targets.contextdir}}"/$_java_home/lib/security/cacerts
       ln -sf /etc/ssl/certs/java/cacerts \
-        "${{targets.destdir}}"/$_java_home/lib/security/cacerts
+        "${{targets.contextdir}}"/$_java_home/lib/security/cacerts
       # symlink for `java-common` to work (which expects jre in $_java_home/jre)
       ln -sf . "${{targets.contextdir}}/$_java_home/jre"
 
