--- a/openjdk-24.yaml
+++ b/openjdk-24.yaml
@@ -183,13 +183,16 @@ subpackages:
           mv "${{targets.destdir}}"/usr/lib/jvm/java-24-openjdk/jmods \
              "${{targets.subpkgdir}}"/usr/lib/jvm/java-24-openjdk
 
-  - name: "${{package.name}}-doc"
-    description: "OpenJDK 24 Documentation"
-    pipeline:
-      - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/usr/lib/jvm/java-24-openjdk
-          mv "${{targets.destdir}}"/usr/lib/jvm/java-24-openjdk/man \
-             "${{targets.subpkgdir}}"/usr/lib/jvm/java-24-openjdk
+  # Disabled doc subpackage for now.
+  # Upstream has switched from troff manpages in the repository to pandoc 
+  # See: https://bugs.openjdk.org/browse/JDK-8344056
+  # - name: "${{package.name}}-doc"
+  #   description: "OpenJDK 24 Documentation"
+  #   pipeline:
+  #     - runs: |
+  #         mkdir -p "${{targets.subpkgdir}}"/usr/lib/jvm/java-24-openjdk
+  #         mv "${{targets.destdir}}"/usr/lib/jvm/java-24-openjdk/man \
+  #            "${{targets.subpkgdir}}"/usr/lib/jvm/java-24-openjdk
 
   - name: "${{package.name}}-demos"
     description: "OpenJDK 24 Demos"
