--- a/gitlab-runner-17.9.yaml
+++ b/gitlab-runner-17.9.yaml
@@ -82,6 +82,12 @@ pipeline:
         golang.org/x/oauth2@v0.27.0
         golang.org/x/crypto@v0.35.0
 
+  - uses: go/bump
+    with:
+      modroot: ./machine
+      deps: |-
+        golang.org/x/crypto@v0.35.0
+        
   - uses: go/build
     with:
       packages: .
