--- a/gitlab-runner-17.9.yaml
+++ b/gitlab-runner-17.9.yaml
@@ -81,6 +81,12 @@ pipeline:
         github.com/go-jose/go-jose/v3@v3.0.4
         golang.org/x/oauth2@v0.27.0
 
+  - uses: go/bump
+    with:
+      modroot: ./machine
+      deps: |-
+        golang.org/x/oauth2@v0.27.0
+
   - uses: go/build
     with:
       packages: .
