Added additional gobump to fully patch CVE

--- a/gitlab-runner-17.9.yaml
+++ b/gitlab-runner-17.9.yaml
@@ -83,6 +83,12 @@ pipeline:
         golang.org/x/oauth2@v0.27.0
         golang.org/x/net@v0.36.0
 
+  - uses: go/bump
+    with:
+      modroot: ./machine
+      deps: |-
+        golang.org/x/net@v0.36.0
+
   - uses: go/build
     with:
       packages: .
